--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 .cybercorpus {
-    width: 250px;
+    height: 20%;
     position: absolute;
     top: 25%;
     left: 50%;
@@ -37,6 +37,6 @@
     margin-top: 25px;
 }
 
-.rick {
+.why_are_you_here {
     margin-top: 50px;
 }
